# simple-monitor-in-cpp-art-pogorelov

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: lint.yml  main-workflow.yml  no-dups.yml
monitor/: CMakeLists.txt
monitor/resource/: config.yml
monitor/src/: Config.cpp  Config.h  ConsoleUI.cpp  ConsoleUI.h  Monitor.cpp  Monitor.h  Print.cpp  Print.h  Types.h  UI.h  main.cpp
monitor/test/: CMakeLists.txt
monitor/test/src/: ConfigTest.cpp  MonitorTest.cpp  PrintTest.cpp  RangeTest.cpp
